--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ JAWSDB_URL = tusocial
 
 
 # DB_HOST=localhost	
-# DB_SQL_USERNAME=root
+# DB_USERNAME=root
 # DB_PASSWORD=''
 # DB_PORT=3306	
 # DB_DATABASE='tusocial'
